--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+find_folder = "0.3.0"
 nalgebra = "0.32.3"
 piston_window = "0.131.0"
 rand = "0.8.5"
